# KI-Wettbewerb

./: .gitignore  Cargo.toml  Ideen.md  README.md  Wettbewerb.ipynb  test.json
KI/: Cargo.toml
KI/src/: layer_topology.rs  main.rs
art-int/: Cargo.toml
art-int/src/: TODO.md  genetics.rs  layer.rs  layer_topology.rs  lib.rs  main.rs  neuron.rs
editor/: app.py  editable.py  event.py  input_parser.py  itemeditor.py  main.py  street_data.py  toolbar.py
editor-rs/: Cargo.toml
editor-rs/.cargo/: config.toml
editor-rs/src/: input.rs  lib.rs  main.rs  node.rs  node_bundles.rs  node_render.rs  sim_manager.rs  simulation_display.rs  themes.rs  tool_systems.rs  toolbar.rs  traits.rs  user_interface.rs
simulator/: Cargo.toml  crossing_connections.md
simulator/benches/: simulation.rs  simulation_builder.rs  simulator_creation.rs
simulator/src/: build_grid.rs  connection.rs  crossing.rs  int_mut.rs  lib.rs  macros.rs  main.rs  movable.rs  node.rs  node_builder.rs  pathfinding.rs  sim_manager.rs  simple.rs  simulation.rs  simulation_builder.rs  street_data.rs  traits.rs  traversible.rs
simulator/src/simple/: movable.rs  node.rs  node_builder.rs  pathfinding.rs  simulation.rs  simulation_builder.rs  traversible.rs
