[package]
name = "editor-rs"
version = "0.1.0"
authors = ["Ferdinand Pamberger <fiesereiswuerfel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# REMOVE BEFORE FINAL RELEASE
bevy={ version = "0.5", features = ["dynamic"] }
bevy_egui="0.6"
egui="0.14"

