[package]
name = "editor-rs"
version = "0.1.0"
authors = ["Ferdinand Pamberger <fiesereiswuerfel@gmail.com>"]
edition = "2018"
resolver = "2"
# Make sure this binary is run when "cargo run" is used in the workspace
default-run = "editor-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# Dependencies for all targets go here.
[dependencies]
bevy_prototype_lyon = "0.3.1"
wasm-bindgen = "0.2"
egui="0.16.1"
bevy_egui = "0.9"
simulator = { path = "../simulator" }
enum_dispatch = "0.3"
bevy_mod_picking = "0.4.0"
tracing = { version="0.1.29" }
tracing-core = "0.1.21"
tracing-subscriber = { version="0.3.5", features=["env-filter"] }
pretty_env_logger = "0.4.0"
art-int = { path = "../art-int" }
serde_json="1.0"
serde={version="1.0", features=["derive"]}
# env_logger = "0.9.0"
# bevy_webgl2 = "0.5"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui="0.14"
# REMOVE DYNCAMIC BEFORE FINAL RELEASE
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}
# , "dynamic"

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
# For error messages
console_error_panic_hook = "0.1"
