[package]
name = "simulator"
version = "0.1.0"
authors = ["Ferdinand Pamberger <fiesereiswuerfel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
serde={version="1.0", features=["derive"]}
enum_dispatch="0.3"
rand="0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simulation"
harness = false

[[bench]]
name = "simulator_creation"
harness = false
[[bench]]
name = "simulation_builder"
harness = false