[package]
name = "simulator"
version = "0.1.0"
authors = ["Ferdinand Pamberger <fiesereiswuerfel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
serde={version="1.0", features=["derive"]}
enum_dispatch="0.3"
num_cpus = "1.13.1"
rand="0.8"
dyn-clone="1.0.4"
pathfinding = "2.2.2"
tracing = { version="0.1.29" }
art-int = { path = "../art-int" }
# tracing-subscriber = { version="0.3.5", features=["env-filter"] }
# env_logger = "0.9.0"
# pretty_env_logger = "0.4.0"
rayon = "1.5.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simulation"
harness = false

[[bench]]
name = "simulator_creation"
harness = false
[[bench]]
name = "simulation_builder"
harness = false